# support_hub_ai

./: .gitignore  Final_kata.md
docs/: HLD.md  (+4 more)
project_source/beginer_source/: .env.example  README.md  pyproject.toml  pyrightconfig.json
project_source/beginer_source/docs/: design_note.md  ingest_guide.md  kata_requirements_coverage.md  limitations_and_next_steps.md
project_source/beginer_source/docs/scenario_outputs/: scenario_1_output.json  scenario_2_output.json  scenario_3_output.json  scenario_4_output.json  scenario_5_output.json  scenario_6_output.json  scenario_7_output.json  scenario_8_output.json  summary_report.md
project_source/beginer_source/src/: docs_corpus.json  session_store.json
project_source/beginer_source/src/agents/: __init__.py  decision_agent.py  decision_llm.py  response_agent.py  response_llm.py  retrieval_agent.py  tool_agent.py  triage_agent.py  triage_llm.py
project_source/beginer_source/src/app/: api.py  config.py  llm_client.py  main.py
project_source/beginer_source/src/data/: docs_corpus.json  docs_seed_urls.txt  mock_business_data.json
project_source/beginer_source/src/domain/: enums.py  models.py  outputs.py
project_source/beginer_source/src/evaluation/: validators.py
project_source/beginer_source/src/graph/: support_case_graph.py
project_source/beginer_source/tests/: test_decision_policy.py  test_mcp_path.py  test_rag_retrieval.py  test_scenarios_e2e.py  test_smoke.py  test_tool_layer.py
project_source/standard_source/: .env.example  README.md  pyproject.toml
project_source/standard_source/tests/: test_smoke.py
(+96 files in other folders)
