[project]
name = "tech-customer-support-ai-beginner"
version = "0.1.0"
description = "Beginner-friendly support resolution starter project"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.0",
  "fastapi>=0.115.0",
  "langchain-community>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-huggingface>=0.1.0",
  "langgraph>=0.2.0",
  "pydantic>=2.7.0",
  "sentence-transformers>=3.0.0",
  "uvicorn>=0.30.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
